<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Santulit</string>

    <string name="onboarding_pages_next">next</string>
    <string name="onboarding_pages_start">Start</string>
    <string name="circular_arrow_button_description">Circular Arrow Button</string>
    <string name="onboarding_title_journal">Journal Your Emotions</string>
    <string name="onboarding_title_meditation">Guided Meditation for Calm</string>
    <string name="onboarding_title_blogs">Discover Mental Wellness Blogs</string>
    <string name="onboarding_title_community">Connect with Care</string>
    <string name="onboarding_description_journal">Effortlessly track your moods and moments. Discover patterns and nurture self-awareness with our journal feature.</string>
    <string name="onboarding_description_meditation">Find peace with guided meditation and breathing exercises to relieve stress and enhance mindfulness.</string>
    <string name="onboarding_description_blogs">Explore curated blogs on mental health, packed with insights and tips to boost resilience and well-being.</string>
    <string name="onboarding_description_community">Join a supportive community to share and grow anonymously. Build meaningful connections without fear of judgment.</string>

    <string name="sign_in_intro_text">Sign in to your account</string>
    <string name="username_hint_text">Username or Email</string>
    <string name="password_hint_text">Password</string>
    <string name="forget_password_text">Forget password?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="register_text">New to Santulit?</string>
    <string name="register_button_text">Register Here</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="forget_password">Forget password ?</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="example_email">abc@xyz.com</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to Login</string>

    <string name="register_message">The journey to self-love starts within.\n Let\'s take the first step together.</string>
    <string name="register_text_display">Let’s get to know you better!</string>
    <string name="register_username_hint">Username</string>
    <string name="register_username">Username:</string>
    <string name="register_email_hint">Email</string>
    <string name="register_user_email">User email:</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password">Password:</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_confirm_password">Re-enter password:</string>
    <string name="register_password_required_text">\u2022 Your password must be at least 8 characters long and include a mix of letters, numbers, and special characters</string>
    <string name="join_santulit">Join Santulit</string>
    <string name="join_using_google">Join using Google</string>

    <string name="reminder">Reminder</string>
    <string name="journal">Journal</string>
    <string name="home">Home</string>
    <string name="blogs">Blogs</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_page_quote">\"Do something today that your future self will thank you for.\"</string>
    <string name="home_page_quote_writer">~Sean Patrick Flanery</string>
    <string name="home_page_question">What\'s your mood today?</string>

    <string name="journal_date">28</string>
    <string name="journal_month_year">July 2002</string>
    <string name="journal_day">Sunday</string>
    <string name="journal_title">One more day developing Santulit</string>
    <string name="journal_greetings">Good morning Gyani</string>
    <string name="journal_display_date" tools:ignore="TypographyDashes">28–07-2025 Monday</string>
    <string name="sort">sort</string>
    <string name="untitled">Untitled</string>

    <string name="write_journal_date">28 july 2002</string>
    <string name="write_journal_entry_hint">Write your journal here</string>

    <string name="reminder_track_your_progress">Track your progress</string>
    <string name="reminder_weekly_overview">Weekly Overview</string>
    <string name="reminder_week">Jan 01 - Jan 07</string>
    <string name="reminder_text_graph_main">You are doing good!</string>
    <string name="reminder_text_graph">You almost reached your daily goals</string>
    <string name="reminder_track">Track</string>
    <string name="reminder_today_tasks">Today’s tasks</string>
    <string name="reminder_goals">Goals</string>
    <string name="reminder_weekly_goals">Weekly goals</string>
    <string name="reminder_monthly_goals">Monthly goals</string>
    <string name="reminder_upcoming_events">Upcoming events</string>

    <string name="upcoming_events">Upcoming events</string>
    <string name="upcoming_event_example">Board Meeting</string>
    <string name="upcoming_event_timings">Timing</string>
    <string name="upcoming_time_example">11:00 am</string>
    <string name="date_ten">10</string>

    <string name="today_task">Today\'s tasks</string>
    <string name="task_date">01/01/2025</string>
    <string name="task_counter">4/7</string>
    <string name="add_more_task">+ Add more task</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="set_a_reminder">Set a reminder</string>
    <string name="reminder_title">Add title here</string>
    <string name="reminder_description">Description (optional)</string>
    <string name="reminder_time">9:00 AM</string>
    <string name="repeat">Repeat</string>
    <string name="importance">Importance</string>

    <string-array name="repeat_options">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="importance_option">
        <item>Low</item>
        <item>Med</item>
        <item>High</item>
    </string-array>
</resources>