<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteJournal"
    android:background="@color/softpinkwhitebackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/softpinkwhitebackground"
        android:gravity="center_vertical"
        android:elevation="4dp">
        <EditText
            android:id="@+id/titleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/untitled"
            android:fontFamily="@font/opensans"
            android:textColor="@color/black"
            android:background="@color/softpinkwhitebackground"
            android:inputType="text"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/writeJournalDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_day"
            android:fontFamily="@font/inika_regular"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/writeJournalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_journal_date"
            android:fontFamily="@font/inika_regular"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>