<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister"
    android:backgroundTint="@color/softpinkwhitebackground">

    <TextView
        android:id="@+id/tvRegisterMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background_register_message"
        android:fontFamily="@font/opensans"
        android:gravity="center"
        android:text="@string/register_message"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_display"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterMessage"
        app:layout_constraintStart_toStartOf="@id/tvRegisterMessage"/>


    <EditText
        android:id="@+id/tvRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="52dp"
        android:background="@drawable/custom_backgroud_edittext"
        android:hint="@string/register_username"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:fontFamily="@font/opensans"
        android:drawableStart="@drawable/icon_profile"
        android:inputType="textPersonName"
        android:drawablePadding="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterText"/>

    <EditText
        android:id="@+id/tvRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="53dp"
        android:background="@drawable/custom_backgroud_edittext"
        android:hint="@string/register_email"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:fontFamily="@font/opensans"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/icon_profile"
        android:drawablePadding="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterUsername"/>

        <EditText
            android:id="@+id/tvRegisterPassrord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_backgroud_edittext"
            android:hint="@string/register_password"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans"
            android:inputType="textPassword"
            android:drawableStart="@drawable/icon_lock"
            android:drawablePadding="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterEmail"/>
</androidx.constraintlayout.widget.ConstraintLayout>