<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/softpinkwhitebackground"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_a_reminder"
            android:textSize="20sp"
            android:fontFamily="@font/inika_regular"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edtReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_background_edittext"
            android:hint="@string/reminder_title"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/edtReminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_background_edittext"
            android:hint="@string/reminder_description"
            android:textColor="@color/black"
            android:fontFamily="@font/inika_regular"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/edtReminderTitle"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:background="@drawable/custom_background_edittext"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/edtReminderDescription">

            <EditText
                android:id="@+id/edtReminderDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="null"
                android:hint="@string/task_date"
                android:textColor="@color/black"
                android:fontFamily="@font/opensans"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <View
                android:id="@+id/divider"
                android:layout_width="2dp"
                android:layout_height="40dp"
                android:background="@color/grey"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/edtReminderDate"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/icon_calender_4x"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>