<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/softpinkwhitebackground"
    tools:context=".JournalFragment">

    <LinearLayout
        android:id="@+id/llActionBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/pastelyellow"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgJournlaProfile"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/profile_avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/opensans"
            android:text="@string/journal_greetings"
            android:textColor="@color/black" />

        <!-- Add options menu here       -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDateAndSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:minHeight="28dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llActionBar">

        <TextView
            android:id="@+id/tvDateJournal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/opensans"
            android:text="@string/journal_display_date"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:maxHeight="20dp"
                android:minWidth="20dp"
                android:src="@drawable/icon_sort" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans"
                android:paddingStart="4dp"
                android:text="@string/sort"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvJournal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llDateAndSort"
        tools:listitem="@layout/listitem_journal" />

</androidx.constraintlayout.widget.ConstraintLayout>