<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:backgroundTint="@color/softpinkwhitebackground">

    <LinearLayout
        android:id="@+id/llQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_background_homepage_message"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="20dp"
        android:paddingEnd="12dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inika_regular"
            android:gravity="center"
            android:text="@string/home_page_quote" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inika_regular"
            android:text="@string/home_page_quote_writer" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/homeMoodLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:maxHeight="52dp"
        app:cardCornerRadius="26dp"
        android:backgroundTint="@color/pastelyellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llQuote"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_question"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:fontFamily="@font/inika_regular" />

    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/moodGraph"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/pastelyellow"
        app:layout_constraintTop_toBottomOf="@+id/homeMoodLayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/moodGraph"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardUseCompatPadding="true"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardUseCompatPadding="true"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>